--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="descImgLogoGoogle">Logo Google</string>
     <string name="descImgLogoFacebook">Logo Facebook</string>
 
-<!--Shows-->
+    <!--Shows-->
     <string name="TxtEventosShow1DT">Data: 27 de ago de 2022 - 28 de ago</string>
     <string name="TxtEventosShow1NM">Nome:Festival Sarará 2022</string>
     <string name="TxtEventosShow1LC">Local:Esplanada do Mineirão-MG</string>
@@ -47,7 +47,7 @@
     <string name="TxtEventosShow4NM">Nome: Ta Embarcado</string>
     <string name="TxtEventosShow4LC">Local:Teatro das Artes-SP</string>
 
-<!--pecas-->
+    <!--pecas-->
     <string name="TxtEventosPeca1DT">Data: 25 de set de 2021</string>
     <string name="TxtEventosPeca1NM">Nome: Peça O Juíz de Paz na Roça</string>
     <string name="TxtEventosPeca1LC">Local: Oficina De Atores Abel Santana-ES</string>
@@ -116,8 +116,6 @@
     <string name="TxtEventosPalet4LC">Local: Online</string>
 
 
-
-
     <!--Tela favoritos-->
     <string name="TxtFavoritos">Favoritos</string>
     <string name="TxtFavoritosMensagem">Você ainda não tem nem um evento favorito</string>
@@ -165,6 +163,7 @@
     <string name="TxtPadrao">Padrão</string>
     <string name="TxtCom">Comunicação</string>
     <string name="TxtAvalie">Avalie o app</string>
+    <string name="TxtUserAvaliacao">Sua Avaliação</string>
     <string name="TxtHistorico">Historico de busca</string>
     <string name="TxtSuporte">Surporte</string>
     <string name="TxtInfoLegais">Informaçoes legais</string>
@@ -173,7 +172,8 @@
     <string name="TxtLogout">Fazer logout</string>
     <string name="TxtClaro">Tema</string>
     <string name="TxtEscuro">Escuro</string>
-
+    <string name="txtSuaAvaliacao">Sua Avaliação</string>
+    <string name="txtEnviar">Enviar</string>
 
     <!-- ================Info evento================-->
     <string name="TxtNomeEvento">Ta Embarcado - FABIO RABIN</string>
